Fixed z-index/color issue

--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,7 @@ img {
   height: 100%;
   height: 40vh;
   background: rgba(17, 40, 72, 0.629);
+  z-index: -1;
 }
 
 .back .container {
